syntax = "proto3";

package tmservector;

service TMSerVectorContract {
  rpc addServerToCommit(AddServerRequest) returns (AddServerResponse);
  rpc prepare(PrepareRequest) returns (PrepareResponse);
  rpc commit(CommitRequest) returns (CommitResponse);
  rpc abort(AbortRequest) returns (AbortResponse);
}

message AddServerRequest {
  string servectorIP = 1;
  int32 servectorPort = 2;
  string clientID = 3;
  string resourceID = 4;
}

message AddServerResponse {
  bool success = 1;
}

message PrepareRequest {}

message PrepareResponse {
  bool ready = 1;
}

message CommitRequest {}

message CommitResponse {
  bool success = 1;
}

message AbortRequest {}

message AbortResponse {
  bool aborted = 1;
}
